# ibm-spss-assistant

./: .gitignore  .mcp.json  LICENSE  README.md
.claude-plugin/: plugin.json
mcp-server/: README.md  pyproject.toml
mcp-server/docs/: spss-detection-and-binding.md
mcp-server/src/spss_mcp/: __main__.py  server.py  spss_engine.py  spss_worker.py  utils.py
mcp-server/src/spss_mcp/tools/: analysis.py  data.py  export.py  quick.py
references/: advanced-analysis-guide.md  advanced-procedures.md  error-troubleshooting.md  interpretation-templates.md  paper-expressions.md  power-analysis-sample-size.md  questionnaire-template.md  syntax-reference.md  test-selection-guide.md  visualization-guide.md
skills/spss-cleaning/: SKILL.md
skills/spss-guide/: SKILL.md
skills/spss-interpreter/: SKILL.md
skills/spss-report/: SKILL.md
skills/spss-syntax/: SKILL.md
skills/spss-what-test/: SKILL.md
