[project]
name = "spss-mcp-server"
version = "1.0.0"
description = "MCP Server for IBM SPSS Statistics — enables AI agents to directly execute analyses in your local SPSS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Amki1209" }]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
spss-mcp = "spss_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spss_mcp"]
